slurm-lambda4-27232.out
*** SLURM BATCH JOB 'test_job' STARTING ***
*** Activating environment cs236781-hw ***
  File "run_exp_adam.py", line 43
    model_type='resnet
                     ^
SyntaxError: EOL while scanning string literal
*** SLURM BATCH JOB 'test_job' DONE ***
